# get-RPF

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  adapter_report.txt  final_extracted_rpfs.fastq  good_rpf_report.rpf_checks.txt  good_rpf_report.txt  mcglincy_seqspec_test.fastq  mcglincy_seqspec_test.seqspec.yaml  mixed_strategy_rpfs.fastq  playground.ipynb  pyproject.toml  quality_report.txt  repo-to-text_2025-07-25-08-28-47-UTC.txt  repo-to-text_2025-07-25-08-29-33-UTC.txt  setup.py  test_check_adapter_output.rpf_checks.txt  test_check_adapter_output.txt  test_check_output.rpf_checks.txt  test_check_output.txt  test_data.fastq  test_extracted_collapsed.fasta  test_seqspec_output.fastq  test_seqspec_output.seqspec.yaml
.github/workflows/: build_container.yml
comprehensive_test_data/: adapter_contaminated.fastq  adapter_contaminated_extracted.fastq  clean_rpfs.fastq  clean_rpfs_extracted.fastq  collapsed_format.fasta  collapsed_format_extracted.fastq  extreme_contamination.fastq  extreme_contamination_extracted.fastq  length_variants.fastq  length_variants_extracted.fastq  low_quality.fastq  low_quality_extracted.fastq  mcglincy_protocol.fastq  mcglincy_protocol_extracted.fastq  multi_adapter_types.fastq  multi_adapter_types_extracted.fastq  test_cases_metadata.json  test_results.json
docs/: api.md  conf.py  file_formats.md  index.md  rpf_checks.md  usage.md
get_RPF/: alignment.py  kmer.py  main.py
get_RPF/tests/: test_basics.py
output_test/: result.extraction_report.json  result.report.html
scripts/: create_test_data.py  generate_complex_test_cases.py  generate_test_cases.py  test_rpf_extraction.py
src/getRPF/: __init__.py  cli.py
src/getRPF/core/: __init__.py  checkers.py  handlers.py  seqspec_generator.py  seqspec_loader.py
src/getRPF/utils/: __init__.py  file_utils.py  logging.py  (+1 more)
test/: adapter_contaminated_cleanliness_report.txt
test_data/: adapter_contaminated.fastq  base_biased.fastq  good_rpf.collapsed  good_rpf.fastq  length_outliers.fastq  mixed_quality.fastq  real.collapsed.fa  test_extracted_adapter.fastq  test_extracted_rpfs.fastq
tests/: test_cli.py
tests/test_core/: test_cleanliness.py
(+12 files in other folders)
